--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,10 +25,37 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-<!--                <li><a href="/">Home</a></li>-->
+                <!--                <li><a href="/">Home</a></li>-->
                 <li><a href="/cources">Cources</a></li>
                 <li><a href="/feedback">Feedback</a></li>
                 <li><a href="/about">Why We?</a></li>
+<!--                {% if current_user.is_authenticated %}-->
+<!--                <li>-->
+<!--                    <a href="{{ url_for('main.user', username=current_user.username) }}">-->
+<!--                        Profile-->
+<!--                    </a>-->
+<!--                </li>-->
+<!--                {% endif %}-->
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                {% if current_user.is_authenticated %}
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        <img src="{{ current_user.gravatar(size=18) }}">
+                        Account <b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="{{ url_for('auth.logout') }}">Log Out</a></li>
+                        <li>
+                            <a href="{{ url_for('main.user', username=current_user.username) }}">
+                                Profile
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                {% else %}
+                <li><a href="{{ url_for('auth.login') }}">Log In</a></li>
+                {% endif %}
             </ul>
         </div>
     </div>
@@ -46,11 +73,18 @@
     {% endfor %}
     {% block page_content %}{% endblock %}
 </div>
+
+<div class="col text-center footer">
+    {%- block footer %}
+    <footer>&copy; 2022 L|T|S, Inc.</footer>
+    {%- endblock footer %}
+</div>
+
 {% endblock %}
 
 {% block styles %}
 {{super()}}
-  <link rel="stylesheet" href="{{url_for('.static', filename='mystyle.css')}}">
+<link rel="stylesheet" href="{{url_for('static', filename='mystyle.css')}}">
 {% endblock %}
 
 {% block scripts %}
