--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,17 +1,18 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
+{% import "_macros.html" as macros %}
 
 {% block title %}L | T | S{% endblock %}
 
 {% block page_content %}
 
 <div class="page-header">
-    <h1>Hello, {% if name %}{{ name }}{% else %}Stranger{% endif %}!</h1>
-    {% if not known %}
-    <h6>Pleased to meet you!</h6>
-    {% else %}
-    <h6>Happy to see you again!</h6>
-    {% endif %}
+    <h1>Hello,
+        {% if current_user.is_authenticated %}
+        {{ current_user.username }}
+        {% else %}
+        Stranger
+        {% endif %}!</h1>
 </div>
 
 <main class="main">
@@ -21,14 +22,20 @@
         </video>
     </section>
 </main>
+<br/>
+<div>
+    {% if current_user.can(Permission.WRITE) %}
+    {{ wtf.quick_form(form) }}
+    {% endif %}
+</div>
+
+{% include '_posts.html' %}
+
+<div class="pagination">
+    {{ macros.pagination_widget(pagination, '.index') }}
+</div>
 
 <br/>
-
-{{ wtf.quick_form(form) }}
-
-<br/>
-
 <p>The local date and time is {{ moment(current_time).format('LLL') }}.</p>
 <p>That was {{ moment(current_time).fromNow(refresh=True) }}</p>
-
 {% endblock %}
