--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -1,11 +1,13 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Feedback{% endblock %}
+{% block title %}Sign Up{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
-    <h1>Feedback</h1>
+    <h1>Sign Up</h1>
 </div>
-{{ wtf.quick_form(form) }}
+<div class="col-md-4">
+    {{ wtf.quick_form(form) }}
+</div>
 {% endblock %}
