--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -29,6 +29,8 @@
     {% endif %}
 </div>
 
+
+
 {% include '_posts.html' %}
 
 <div class="pagination">
@@ -38,4 +40,9 @@
 <br/>
 <p>The local date and time is {{ moment(current_time).format('LLL') }}.</p>
 <p>That was {{ moment(current_time).fromNow(refresh=True) }}</p>
+{% endblock %}
+
+{% block scripts %}
+{{ super() }}
+{{ pagedown.include_pagedown() }}
 {% endblock %}
