last before brake

--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -64,6 +64,9 @@
     </div>
 </div>
 
+<h3>Enrolled courses by {{ user.username }}</h3>
+{% include '_orders.html' %}
+
 <h3>Posts by {{ user.username }}</h3>
 {% include '_posts.html' %}
 <div class="pagination">
