--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,7 +26,7 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <!--                <li><a href="/">Home</a></li>-->
-                <li><a href="/cources">Cources</a></li>
+                <li><a href="/cources">Courses</a></li>
                 <li><a href="/feedback">Feedback</a></li>
                 <li><a href="/about">Why We?</a></li>
 <!--                {% if current_user.is_authenticated %}-->
