--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -34,8 +34,13 @@
                 <a href="{{ url_for('.post', id=post.id) }}">
                     <span class="label label-default">Permalink</span>
                 </a>
+                </a>
+                <a href="{{ url_for('.post', id=post.id) }}#comments">
+                    <span class="label label-primary">{{ post.comments.count() }} Comments</span>
+                </a>
             </div>
         </div>
     </li>
     {% endfor %}
+
 </ul>
