--- a/app/templates/_orders.html
+++ b/app/templates/_orders.html
@@ -20,10 +20,10 @@
             </div>
             <div class="post-body">
                 {% if not order.approved %}
-                <p>{{order.course_order.coursename}}</p>
+                <p>{{order.course_order.title}}</p>
                 {% elif order.approved %}
                 <a href="{{ url_for('.enrolled_course', id=order.id) }}">
-                    {{order.course_order.coursename}}
+                    {{order.course_order.title}}
                 </a>
                 {% endif %}
             </div>
