--- a/app/templates/enrolled_course.html
+++ b/app/templates/enrolled_course.html
@@ -5,7 +5,7 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h1>{{order.course_order.coursename}}</h1>
+    <h1>{{order.course_order.title}}</h1>
 </div>
 <main class="main">
     <section class="mainVideoSection">
