--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -87,7 +87,7 @@
                 </a>
             </div>
             <div class="post-body">
-                <p>{{order.course_order.coursename}}</p>
+                <p>{{order.course_order.title}}</p>
             </div>
         </div>
         <div class="post-footer">
