--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -10,7 +10,7 @@
 <main>
     <section>
         <article class="about">
-            <h2>Why We?</h2>
+            <h2>Why Us?</h2>
             <p>
                 We're demolishing the walls put in place by passive learning and inaccessibility
                 with an approach that strikes the perfect balance between hands-on practice
