--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,7 +28,7 @@
                 <!--                <li><a href="/">Home</a></li>-->
                 <li><a href="/cources">Courses</a></li>
                 <li><a href="/feedback">Feedback</a></li>
-                <li><a href="/about">Why We?</a></li>
+                <li><a href="/about">Why Us?</a></li>
 <!--                {% if current_user.is_authenticated %}-->
 <!--                <li>-->
 <!--                    <a href="{{ url_for('main.user', username=current_user.username) }}">-->
