--- a/app/templates/approve_order.html
+++ b/app/templates/approve_order.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Flasky - Approve Course{% endblock %}
+{% block title %}L | T | S - Approve Course{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
