--- a/app/templates/courses.html
+++ b/app/templates/courses.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% import "_macros.html" as macros %}
 
-{% block title %}Cources{% endblock %}
+{% block title %}L | T | S - Cources{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
