--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Flasky - {{ user.username }}{% endblock %}
+{% block title %}L | T | S - {{ user.username }}{% endblock %}
 {% import "_macros.html" as macros %}
 
 {% block page_content %}
