--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Flasky - Edit Profile{% endblock %}
+{% block title %}L | T | S - Edit Profile{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
