--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}About{% endblock %}
+{% block title %}L | T | S - About{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
