--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Sign Up{% endblock %}
+{% block title %}L | T | S - Sign Up{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
